--- a/app/static/index.html
+++ b/app/static/index.html
@@ -16,6 +16,7 @@
             padding: 0;
             color: #eee;
             background: #111;
+            overflow: hidden;
         }
 
         .main {
