--- a/app/static/index.html
+++ b/app/static/index.html
@@ -162,22 +162,34 @@
                         Minimap
                     </div>
                 </div>
-                <div class="middle">
-                    Middle
+                <div class="middle row">
                     <div class="row">
                         <div class="col">
-                            <img src="assets/red.png">
+                            <div class="row">
+                                <div>
+                                    <span id="planet-inhabitance"></span>: <span id="planet-name"></span><br />
+                                    Population: <span id="planet-population"></span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    Alliance
+                                </div>
+                                <div class="col">
+                                    Resources
+                                    Sickness: <div id="planet-sickness"></div>
+                                    Infrastructure: <div id="planet-infrastructure"></div>
+                                    Resources: <div id="planet-resource"></div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col">
-                            <img src="assets/red.png">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <img src="assets/red.png">
-                        </div>
-                        <div class="col">
-                            <img src="assets/red.png">
+                            <div class="row">
+                                Score
+                            </div>
+                            <div class="row">
+                                Time
+                            </div>
                         </div>
                     </div>
                 </div>
