--- a/app/static/index.html
+++ b/app/static/index.html
@@ -283,9 +283,11 @@
                 and will pay $73,329 for 3,431 tons.
             </div>
             <div>
-                <button>3,120 tons</button> for $73,329<br />
-                <button>1,000 tons</button> for $2,212<br />
-                <button>Cancel</button>
+                <button id="sell-all"><span id="sell-all-tons"></span> tons</button> for $73,329<br />
+                <div id="sell-1000-tons">
+                    <button id="sell-1000">1,000 tons</button> for $2,212<br />
+                </div>
+                <button id="cancel-modal">Cancel</button>
             </div>
         </div>
     </div>
