--- a/app/static/index.html
+++ b/app/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='initial-scale=1.0, user-scalable=no'>
-    <title>My Phaser 3 Game</title>
+    <title>Warpath</title>
     <style>
         html,
         body {
@@ -17,6 +17,7 @@
             color: #eee;
             background: #111;
             overflow: hidden;
+            user-select: none;
         }
 
         .main {
@@ -54,7 +55,10 @@
         }
 
         .right {
+            background-color: #868486;
+            border: 4px groove #999;
             display: flex;
+            flex-direction: column;
             flex: 1;
             align-items: center;
             justify-content: center;
@@ -110,6 +114,7 @@
             color: black;
             display: flex;
             flex-direction: column;
+            width: 300px;
         }
 
         #modal-wrapper {
@@ -121,7 +126,7 @@
             right: 0;
             align-items: center;
             justify-content: center;
-            /* pointer-events: none; */
+            background-color: rgba(0, 0, 0, 0.5);
         }
     </style>
     <script defer src='vendor.js'></script>
@@ -239,7 +244,28 @@
                 </div>
             </div>
             <div class="right">
+                <div>
+                    <button id="mine">Mine</button>
+                    <button id="populate">Populate</button>
+                    <button id="open-invest">Invest</button>
+                    <button id="open-buy">Buy</button>
+                </div>
                 <div id="phaser-game"></div>
+                <div>
+                    <button id="item-laser">Laser</button>
+                    <button id="item-torpedo">Torpedo <span id="item-torpedo-count"></span></button>
+                    <button id="item-mine">Proximity Mine <span id="item-mine-count"></span></button>
+                    <button id="item-hot-torpedo">Hot Torpedo <span id="item-hot-torpedo-count"></span></button>
+                    <button id="item-nuke">Nuke <span id="item-nuke-count"></span></button>
+                    <button id="item-bio">Bio <span id="item-bio-count"></span></button>
+                </div>
+                <div>
+                    <button id="item-shields">Shields</button>
+                    <button id="item-cloak">Cloak</button>
+                    <button id="item-sun">Sun</button>
+                    <button id="item-warp">Warp</button>
+                    <button id="item-anti-bio">Anti-bio</button>
+                </div>
             </div>
         </div>
         <div class="footer">
@@ -306,6 +332,30 @@
                 <div id="sell-1000-tons">
                     <button id="sell-1000">1,000 tons</button> for $2,212<br />
                 </div>
+                <button id="cancel-modal">Cancel</button>
+            </div>
+        </div>
+
+        <div id="modal-buy" class="modal" style="display: none">
+            <div>Honest Xzyll's Trading Post</div>
+            <div>Item: <div id="item-name"></div>
+            </div>
+            <div>Price: <div id="item-price"></div>
+            </div>
+            <div>Quantity in stock: <div id="item-quantity"></div>
+            </div>
+            <div>Description</div>
+            <div id="item-description"></div>
+            <div>
+                <button id="prev-item">Prev Item</button>
+                <button id="next-item">Next Item</button>
+            </div>
+            <div>
+                <button id="buy-1">Buy One</button>
+                <button id="buy-10">Buy Ten</button>
+                <button id="buy-100">Buy 100</button>
+            </div>
+            <div>
                 <button id="cancel-modal">Cancel</button>
             </div>
         </div>
