--- a/app/static/index.html
+++ b/app/static/index.html
@@ -93,6 +93,19 @@
             flex: 1;
         }
 
+        #minimap-ship {
+            position: absolute;
+            z-index: 100;
+
+            width: 0;
+            height: 0;
+            margin-left: -8px;
+            margin-top: -4px;
+            border-left: 4px solid transparent;
+            border-right: 4px solid transparent;
+            border-bottom: 8px solid #33ff;
+        }
+
         .minimap-planet {
             background-color: #ddd;
             width: 5px;
@@ -380,6 +393,7 @@
                     </div>
                     <div id="minimap-wrapper">
                         <div id="minimap">
+                            <div id="minimap-ship"></div>
                         </div>
                     </div>
                 </div>
