--- a/app/static/index.html
+++ b/app/static/index.html
@@ -84,13 +84,16 @@
             border: 4px groove #999;
             flex: 1;
             padding: 20px;
+            align-items: center;
+            justify-content: center;
         }
 
         #minimap {
             border: 4px groove #999;
             background-color: #111;
             position: relative;
-            flex: 1;
+            width: 200px;
+            height: 200px;
         }
 
         #minimap-ship {
